--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.3.1",
     "@faker-js/faker": "^10.2.0",
     "cypress": "^15.8.2"
   },
